Updated French translations
(Old svn revision: 22835)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,7 @@
 
 	* cs.po: Updated Czech translations by Michal Varady
 	<miko.vaji@gmail.com>
+	* fr.po: Updated French translations by Max Schleiss
 
 2006-08-17  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
