Add Galician translations
(Old svn revision: 22838)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-20  Jean-François Wauthy <pollux@xfce.org>
+
+	* gl.po: Add Galician translations
+
 2006-08-19  Jean-François Wauthy <pollux@xfce.org>
 
 	* cs.po: Updated Czech translations by Michal Varady
