--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-25   Beobide <pi@beobide.net>
+
+        * eu.po: Updated Basque translation.
+
 2006-08-20  Jean-François Wauthy <pollux@xfce.org>
 
 	* gl.po: Add Galician translations
