--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,12 @@
-2006-08-25   Beobide <pi@beobide.net>
+2006-08-26  Benedikt Meurer <benny@xfce.org>
 
-        * eu.po: Updated Basque translation.
+	* POTFILES.in: Add new files here.
+	* libexo-0.3.pot, *.po: Merge new strings.
+	* de.po: Update german translations.
+
+2006-08-25  Piarres Beobide <pi@beobide.net>
+
+	* eu.po: Updated Basque translation.
 
 2006-08-20  Jean-François Wauthy <pollux@xfce.org>
 
@@ -22,7 +28,7 @@
 	* libexo-0.3.pot, *.po: Merge new strings.
 	* de.po: Update german translations.
 
-2006-08-15 Piarres Beobide <pi@beobide.net>
+2006-08-15  Piarres Beobide <pi@beobide.net>
 
 	* eu.po: Updated Basque translation.
 
