--- a/HACKING
+++ b/HACKING
@@ -32,10 +32,8 @@ the chance that it gets added.
 Coding Style
 ============
 
- - GNU coding conventions, with GLib-like extensions, mostly the same
-   as GTK+.
- - Always expand tabs. This differs from the GNU suggestion, but is
-   necessary!
+ - GNU coding conventions, with GLib-like extensions, mostly the same as GTK+.
+ - Always expand tabs. This differs from the GNU suggestion, but is necessary!
 
 
 Release process
@@ -44,9 +42,9 @@ Release process
   1) Check out a fresh copy from Subversion
   2) Increment the version number in configure.in.in and the major version
      number of the library whenever new functions got added
-  3) Update NEWS and ChangeLog, and don't forget to add an entry
-     ("Released x.y.z") to ChangeLog, so people can see which changes
-     were before and after a given release.
+  3) Update NEWS and ChangeLog, and don't forget to add a note about the new
+     release to ChangeLog, so people can see which changes appeared in which
+     release.
   4) Check the gtk-doc.
   5) Run make update-po in po/ and update po/de.po (don't forget the header)!
   6) Unset libexo_version_tag in configure.in.in and reset it after the
@@ -54,14 +52,14 @@ Release process
   7) Verify that make dist works.
   8) "svn commit" the changes.
   9) Create a simple tag for the release,
-      "svn copy svn+ssh://foo-projects.org/var/svn/xfce/libexo/trunk \
-         svn+ssh://foo-projects.org/var/svn/xfce/libexo/tags/release-X.Y.Z"
-     where X.Y.Z is the version number.
+      "svn copy https://xfce.org/svn/xfce/libexo/trunk
+                https://xfce.org/svn/xfce/libexo/tags/exo-X.Y.Ztag"
+     where X.Y.Z is the version number and tag is the version tag, i.e. beta1.
  10) Upload the tarballs to os-cillation ftp
  11) Upload the tarballs to os-works
  12) Upload the tarballs to Berlios
  13) Create a new release at Berlios
  14) Upload the new online documentation (to both .com and .de).
- 15) Update the os-cillation website (don't forget the Download section)
- 16) Adjust the documentation link on xfce.org/documentation/ if necessary.
+ 15) Upload the new online documentation to www.xfce.org.
+ 16) Update the os-cillation website (don't forget the Download section)
  17) Update freshmeat entry.
