--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2006-08-26	Benedikt Meurer <benny@xfce.org>
 
+	* exo/exo-icon-view.c: Finally fix the layout problem where the
+	  appearance of a scrollbar causes the icons to be laid out again and
+	  again. Thanks to Matt McClinch <mattmcclinch@gmail.com> for the
+	  patch. Bug #2219.
+	* exo/exo-icon-view.c: Several small cleanups.
+
+2006-08-26	Benedikt Meurer <benny@xfce.org>
+
 	* configure.in.in: Fix typo, where -NDEBUG was used instead of
 	  -DNDEBUG as preprocessor flag. Bug #2221.
 
